--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "@market-platform/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "serve:all": "nx run-many --target=serve --projects=market-ui,market-api,market-alert --parallel=3",
+    "serve:ui": "nx serve market-ui",
+    "serve:api": "nx serve market-api",
+    "serve:alert": "nx serve market-alert",
+    "build:all": "nx run-many --target=build --projects=market-ui,market-api,market-alert --parallel=3"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~21.0.0",
